security_group.tf
resource "aws_security_group" "nexus_sg" {
  vpc_id      = "${aws_vpc.nexus_vpc.id}"
  name        = "nexus-sg"
  description = "security group that allows ssh and all egress traffic"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = "${var.nexus_port}"
    to_port     = "${var.nexus_port}"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "Nexus SG"
  }
}
